Riordan for the win

--- a/README
+++ b/README
@@ -6,3 +6,5 @@ Fuck zaki i got it working also hahaha
 Steven Riordan Is On The Lash!!!!!
 
 Conroy is a tard that cant get eGit working!!!
+
+Conroy How the fuck do u have a job as a programmer!!! - steve I got it to work!! in ur face!
