--- a/README
+++ b/README
@@ -12,3 +12,5 @@ Conroy How the fuck do u have a job as a programmer!!! - steve I got it to work!
 test
 
 testing for zaki!!!
+
+conroy is still fucked
