this is the commit message i made

--- a/README
+++ b/README
@@ -4,19 +4,4 @@ fuck this
 Fuck zaki i got it working also hahaha
 
 
-<<<<<<< HEAD
-=======
-Steven Riordan Is On The Lash!!!!!
-
-Conroy is a tard that cant get eGit working!!!
-
-Conroy How the fuck do u have a job as a programmer!!! - steve I got it to work!! in ur face!
-
-test
-
-testing for zaki!!!
-
-conroy is still fucked
-
-another change
->>>>>>> branch 'master' of https://github.com/collegegamedev/College-game-development.git
+ian is a gimp
