You're all terrible

--- a/README
+++ b/README
@@ -7,3 +7,5 @@ Fuck zaki i got it working also hahaha
 ian is a gimp
 
 Test Steven riordan views this !!! 
+
+Got it working in eclipse in 5 mins. You're all terrible - Stephen
