Update, to read me, and minor change to game engine, and updated pdf.

--- a/README
+++ b/README
@@ -1,11 +1,25 @@
-Hello World!!
+College-game-development
+========================
 
-fuck this
-Fuck zaki i got it working also hahaha
+Team Updates,
+
+Physics Library has still not been decided,
+Task's have not been assigned to members yet,
+Game Idea have been agreed upon but not confirmed with all members,
+To Use the Game Engine Create a New Activity and inherit it from the Old Existing AndroidGame Activity.
 
 
-ian is a gimp
+Project Updates,
 
-Test Steven riordan views this !!! 
+Game Engine Rolled Back To Original, 
+Refactored implemention folder to implementation (Spelling Error),
+It may have broken the android program, but I believe the xml manifest still might need to be changed anyway.
+I have not attempted to fix it as I don't I am not 100% certain about the changes I need to make.
 
-Got it working in eclipse in 5 mins. You're all terrible - Stephen
+Updated PDF, Still only 2 Chapters Available, will update it when more are released,
+
+
+
+
+
+Zaki,
